--- a/config_2.json
+++ b/config_2.json
@@ -1,12 +1,13 @@
 {
   "startDate": "2015-01-01 00:00:00",
-  "endDate": "2015-01-02 00:00:00",
+  "observationLength": 1,
   "range": "N1",
   "step": 60,
   "outputPath": "/home/sorrow/prao-output-01-01-15/",
   "mode": ".pnt",
   "fileListPath": "/home/sorrow/CLionProjects/prao-fourier/01-15-list-files.txt",
   "calibrationListPath": "/home/sorrow/CLionProjects/prao-fourier/01-15-calb.txt",
-  "durationStarSeconds": 204.8
+  "durationStarSeconds": 204.8,
+  "summationEnabled": false
 }
 
