--- a/config_2.json
+++ b/config_2.json
@@ -1,6 +1,6 @@
 {
   "startDate": "2015-01-01 00:00:00",
-  "observationLength": 3,
+  "observationLength": 1,
   "range": "N1",
   "step": 60,
   "outputPath": "/home/sorrow/prao-output-01-01-15",
@@ -8,6 +8,7 @@
   "fileListPath": "/home/sorrow/CLionProjects/prao-cnn/01-15-list-files.txt",
   "calibrationListPath": "/home/sorrow/CLionProjects/prao-cnn/01-15-calb.txt",
   "durationStarSeconds": 204.8,
-  "summationEnabled": false
+  "summationEnabled": false,
+  "frequencyAverage": true
 }
 
