Добавлен параметр endDate (с новой логикой), поправлена ошибка генерации времени

--- a/config_2.json
+++ b/config_2.json
@@ -1,6 +1,7 @@
 {
-  "startDate": "2015-01-01 16:00:00",
-  "observationLength": 1,
+  "startDate": "2015-01-01 14:05:00",
+  "endDate": "2015-01-01 14:08:00",
+  "observationLength": 3,
   "range": "N1",
   "step": 60,
   "outputPath": "/home/sorrow/prao-output-01-01-15",
@@ -8,7 +9,7 @@
   "fileListPath": "/home/sorrow/CLionProjects/prao-cnn/01-15-list-files.txt",
   "calibrationListPath": "/home/sorrow/CLionProjects/prao-cnn/01-15-calb.txt",
   "durationStarSeconds": 204.8,
-  "summationEnabled": false,
+  "summationEnabled": true,
   "frequencyAverage": true
 }
 
