Режим подсчета средних для частот теперь включен по умолчанию, поправлена важная ошибка с dataHeader.tresolution

--- a/config_2.json
+++ b/config_2.json
@@ -9,7 +9,6 @@
   "fileListPath": "/home/sorrow/CLionProjects/prao-cnn/01-15-list-files.txt",
   "calibrationListPath": "/home/sorrow/CLionProjects/prao-cnn/01-15-calb.txt",
   "durationStarSeconds": 204.8,
-  "summationEnabled": true,
-  "frequencyAverage": true
+  "summationEnabled": true
 }
 
