--- a/config_2.json
+++ b/config_2.json
@@ -1,7 +1,7 @@
 {
   "startDate": "2015-01-01 14:05:10",
-  "endDate": "2015-01-01 14:05:10",
-  "observationLength": 30,
+  "endDate": "2015-01-01 14:10:20",
+  "observationLength": 1,
   "range": "N1",
   "step": 60,
   "outputPath": "/home/sorrow/prao-output-01-01-15",
@@ -9,6 +9,7 @@
   "fileListPath": "/home/sorrow/CLionProjects/prao-cnn/01-15-list-files.txt",
   "calibrationListPath": "/home/sorrow/CLionProjects/prao-cnn/01-15-calb.txt",
   "durationStarSeconds": 204.8,
-  "summationEnabled": true
+  "summationEnabled": false,
+  "writeRawData": true
 }
 
